# firebird-money

./: CLAUDE.md  LICENSE  README.md  package-lock.json
.claude/skills/budget-file-to-transaction/: SKILL.md
.cursor/skills/budget-file-to-transaction/: SKILL.md
.github/workflows/: build-and-test.yml  ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: db.py  init_db.py  main.py
backend/app/features/accounts/: models.py  routes.py
backend/app/features/categories/: models.py  routes.py
backend/app/features/users/: models.py  routes.py
backend/src/: init_db.py  main.py
backend/src/features/accounts/: models.py  routes.py
backend/tests/: test_accounts_routes.py  test_categories_routes.py  test_users_routes.py
client/: .env.example  .gitignore  .oxlintrc.json  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: LeftMenu.css  LeftMenu.tsx  Popover.css  TopMenu.css  TopMenu.tsx  TopMenuButton.css  TopMenuButton.tsx
client/src/features/categories/: types.ts  use-categories.ts
client/src/features/transactions/: DownloadButton.css  DownloadButton.tsx  (+12 more)
client/src/lib/: api-client.ts  download-file.ts  query-client.ts  toast.ts  use-anchored-popover.ts
client/src/routes/: __root.css  __root.tsx  index.tsx  rules.tsx  transactions.tsx
frontend/: .prettierrc.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
server/: .env.example  .gitignore  Cargo.toml
server/data/transactions/outputs/: transactions_sample.csv
server/locales/: en.ftl  fr.ftl
server/migrations/: 20260706011228_create_transactions.sql  20260707004543_create_categories.sql  20260707013351_seed_categories.sql  20260707021117_add_transactions_category_fk.sql  20260708132733_validate_transactions_category_fk.sql  20260709003616_validate_transactions_category_fk_2.sql
server/src/: l10n.rs  main.rs
server/src/features/: mod.rs
server/src/features/categories/: handlers.rs  mod.rs  model.rs  repository.rs  tests.rs
server/src/features/transactions/: download.rs  handlers.rs  mod.rs  model.rs  repository.rs  tests.rs
server/src/shared/: http_error.rs  l10n.rs  mod.rs  postgres.rs
