[tool.poetry]
name = "firebird-money-backend"
version = "0.1.0"
description = ""
authors = ["Samuel Duhaime-Morissette <sduhaimemorissette@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.12"
uvicorn = "0.34.2"
pydantic = "2.11.4"
email-validator = "2.2.0"
sqlmodel = "0.0.24"
psycopg2-binary = "2.9.10"
python-dotenv = "1.1.0"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
ruff = "0.11.10"
pytest = "8.3.5"
httpx = "0.28.1"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
